Fix the cause of side scrolling on mobile

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -22,10 +22,6 @@ body {
     font-size: 14px;
     color: #000;
 
-    @include mobile {
-        overflow-x: hidden;
-    }
-
     @include tablet {
         min-width: 1325px;
         font-size: 16px;
